<resources>
    <string name="app_name">口可口可</string>
    <string name="menu_str_invite_friend">邀请好友</string>
    <string name="menu_str_about_us">关于</string>
    <string name="menu_str_logout">登出</string>
    <string name="navi_str_index">首页</string>
    <string name="navi_str_my_topic">我的话题</string>
    <string name="navi_str_label">收藏标签</string>
    <string name="navi_str_charge">充值提现</string>
    <string name="navi_str_setting">系统设置</string>
    <string name="navi_str_logout">登录登出</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
